--- a/style.css
+++ b/style.css
@@ -33,3 +33,20 @@ p {
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     max-width: 500px;
 }
+
+img {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    display: block;
+    margin: 0 auto 20px;
+}
+
+ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
