--- a/style.css
+++ b/style.css
@@ -45,8 +45,13 @@ img {
 ul {
     list-style-type: none;
     padding-left: 0;
+    text-align: center;
 }
 
 li {
     margin-bottom: 10px;
+}
+
+h3 {
+    text-align: center;
 }
